install performance tool and integrate Google Tag manager

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -54,7 +54,7 @@
     "faq_answer_2": "Sie können das Kontaktformular auf dieser Seite verwenden oder uns direkt eine E-Mail senden.",
     "faq_question_3": "Bieten Sie kundenspezifische Lösungen an?",
     "faq_answer_3": "Ja, wir passen unsere Dienstleistungen an Ihre spezifischen Bedürfnisse an.",
-    "project_2_more_info": "Bookly, entwickelt von Cyborg, ist eine funktionsreiche Flutter-Mobile-App, die es Benutzern ermöglicht, sich sicher zu registrieren und anzumelden, Passwörter zu verwalten, durch verschiedene Buchkategorien zu stöbern und zu suchen, Bücher basierend auf Präferenzen zu filtern, Bücher zu Wunschlisten hinzuzufügen, sichere Kreditkartenzahlungen durchzuführen, Lieferadressen zu speichern, Bestellungen aufzugeben und zu verfolgen, häufig gestellte Fragen zu beantworten und sich für Newsletter anzumelden."    
+    "project_2_more_info": "Bookly, entwickelt von Cyborg, ist eine funktionsreiche Flutter-Mobile-App, die es Benutzern ermöglicht, sich sicher zu registrieren und anzumelden, Passwörter zu verwalten, durch verschiedene Buchkategorien zu stöbern und zu suchen, Bücher basierend auf Präferenzen zu filtern, Bücher zu Wunschlisten hinzuzufügen, sichere Kreditkartenzahlungen durchzuführen, Lieferadressen zu speichern, Bestellungen aufzugeben und zu verfolgen, häufig gestellte Fragen zu finden und sich für Newsletter anzumelden."    
   },
   "footer": {
     "contact_info": "Kontaktinformationen",
