--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -67,7 +67,7 @@
     "page_title": "Home - Cyborg IT Technology",
     "page_description": "Welcome to Cyborg IT Technology. We provide top-notch IT consulting and development services.",
     "project_2_more_info": "Bookly, developed by Cyborg, is a feature-rich Flutter mobile app that allows users to securely register and log in, manage their passwords, browse and search through various book categories, filter books based on preferences, add books to their wish lists, make secure credit card payments, store delivery addresses, place and track orders, access frequently asked questions, and subscribe to newsletters."  ,
-    "close": "View More"
+    "close": "Close"
 
   },
   
