--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -216,7 +216,7 @@
     "faq_answer_6": "Yes, we offer ongoing maintenance and support to ensure your systems continue to run smoothly.",
 
     "faq_question_7": "How can I reach you?",
-    "faq_answer_7": "You can reach us by email at info@cyborg.com, via WhatsApp at +995 598 70 79 73, or using the contact form on our website."
+    "faq_answer_7": "You can reach us by email at info@cyborg-it.de, via WhatsApp at +995 598 70 79 73, or using the contact form on our website."
 ,"faq_contact_btn": "Contact Us",
     "faq_offer_btn": "Request a Quote",
     "page_title": "About Us - Cyborg IT Technology",
@@ -268,7 +268,7 @@
     "address_line1": "",
     "address_line2": "",
     "phone": "Phone: (+995) 598-707973",
-    "email_contact": "Email: info@cyborg.com",
+    "email_contact": "Email: info@cyborg-it.de",
     "follow_us": "Follow Us",
     "linkedin": "LinkedIn",
     "whatsapp_24_7": "Available 24/7 on WhatsApp"
@@ -279,7 +279,7 @@
     "title": "Privacy Policy and Terms of Use",
     
     "privacy_policy_title": "Privacy Policy",
-    "privacy_policy_aim": "DATA PROTECTION POLICY\n\nAIM OF THE DATA PROTECTION POLICY\nCyborg is fully committed to complying with applicable data protection laws, as we believe that ensuring data protection is the basis of trustworthy business relationships.\n\nWe are always working to stay compliant - encouraging audits, certifications, and providing industry-standard contractual protections.\n\nThis Data Protection Policy ensures the level of data protection prescribed by the European Union Data Protection Regulations and provides one of the necessary framework conditions for cross-border data transmission.\n\nThis Data Protection Policy applies to all companies of Cyborg, affiliated companies, and their employees and is based on globally accepted, basic principles of data protection.\n\nThe latest version of the Data Protection Policy can be accessed with the data privacy information on Cyborg’s website at: cyborg.com",
+    "privacy_policy_aim": "DATA PROTECTION POLICY\n\nAIM OF THE DATA PROTECTION POLICY\nCyborg is fully committed to complying with applicable data protection laws, as we believe that ensuring data protection is the basis of trustworthy business relationships.\n\nWe are always working to stay compliant - encouraging audits, certifications, and providing industry-standard contractual protections.\n\nThis Data Protection Policy ensures the level of data protection prescribed by the European Union Data Protection Regulations and provides one of the necessary framework conditions for cross-border data transmission.\n\nThis Data Protection Policy applies to all companies of Cyborg, affiliated companies, and their employees and is based on globally accepted, basic principles of data protection.\n\nThe latest version of the Data Protection Policy can be accessed with the data privacy information on Cyborg’s website at: cyborg-it.de",
     
     "privacy_policy_commitment": "PRINCIPLES OF PERSONAL DATA PROCESSING\n\nWe collect and use (process) certain types of information (Personal Data) that relate to the people (Data Subjects) we interact with to carry out our business.\n\nWe are confident that when processing personal data, individual rights must be protected, which means that all personal data must be collected and processed in a legal and fair manner.\n\nTherefore, we presume and agree that Personal Data shall be:",
     
@@ -327,7 +327,7 @@
     "privacy_policy_rights.restriction": "Right to Restriction of Processing: You have the right to demand the restriction of the processing of your data if the requirements specified in Art. 18 of the GDPR have been fulfilled. This is, for example, the case if you dispute the correctness of your data. For the duration of the verification of the correctness of the data, you may demand the restriction of the processing.",
     "privacy_policy_rights.object": "Right to Object: If the processing is based upon an overriding interest or your data are used for the purposes of direct advertising, you have the right to object to the processing of your data.",
     "privacy_policy_rights.portability": "Right to Data Portability: Insofar as the data processing is undertaken based upon a consent or the fulfillment of a contractual agreement and this is also undertaken while using an automated processing system, you have the right to receive your data in a structured, commonplace, and machine-readable format and to transfer these data to another data processing service provider.",
-    "privacy_policy_rights.revocation": "Right of Revocation: If the data processing is undertaken based upon a consent, you have the right to withdraw your consent for the data processing, with effectiveness for the future, at any time and upon a free-of-charge basis, by using the following address: info@cyborg.com.",
+    "privacy_policy_rights.revocation": "Right of Revocation: If the data processing is undertaken based upon a consent, you have the right to withdraw your consent for the data processing, with effectiveness for the future, at any time and upon a free-of-charge basis, by using the following address: info@cyborg-it.de.",
     "privacy_policy_rights.complain": "Right to Complain: You also have the right to complain to a government supervisory authority regarding our processing of your data.",
     
     "privacy_policy_international_transfers_title": "International Transfers",
@@ -369,7 +369,7 @@
     "severability_content": "If any term, provision, or wording in these Terms of Use is found to be invalid, illegal, or unenforceable for any reason, such finding shall not affect any other terms, provisions, or wording in these Terms of Use.",
     
     "contact_us_title": "Contact Us",
-    "contact_us_content": "If you have any questions or comments regarding these Terms of Use, please contact us at info@cyborg.com.\n\nWe may update the Terms occasionally, with changes taking effect immediately upon posting unless stated otherwise. We recommend reviewing the Terms periodically for any updates. If you do not agree with the Terms, please stop using the website immediately.\n\nThank you for your attention and for using our website!",
+    "contact_us_content": "If you have any questions or comments regarding these Terms of Use, please contact us at info@cyborg-it.de.\n\nWe may update the Terms occasionally, with changes taking effect immediately upon posting unless stated otherwise. We recommend reviewing the Terms periodically for any updates. If you do not agree with the Terms, please stop using the website immediately.\n\nThank you for your attention and for using our website!",
     
     "updated_date": "Last updated: November 11, 2024"
   },
