fix fonts and some responsive designs

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -19,7 +19,7 @@
   "home": {
     "page_title": "Startseite - Cyborg IT Technology",
     "page_description": "Willkommen bei Cyborg IT Technology. Wir bieten erstklassige IT-Beratung und Entwicklungsdienstleistungen.",
-    "title":  "CYBORG\nHochwertige, kostengünstige IT-Lösungen, rund um die Uhr",
+    "title":  "Hochwertige, kostengünstige IT-Lösungen, 24/7",
     "subtitle": "Ihre Vision, unsere Expertise",
     "vision_content": "Wir sind Cyborg, eine Fusion aus menschlicher Kreativität und maschineller Präzision.",
     "vision_content2": "Mit Sitz in Georgien bieten wir kostengünstige Lösungen ohne die zusätzlichen Kosten europäischer Steuern.",
@@ -213,7 +213,7 @@
     "faq_answer_6": "Ja, wir bieten laufende Wartungs- und Supportleistungen an, um sicherzustellen, dass Ihre Systeme reibungslos funktionieren. Dazu gehören Fehlerbehebungen, Sicherheitsupdates und auf Wunsch regelmäßige Optimierungen.",
   
     "faq_question_7": "Wie kann ich Sie erreichen?",
-    "faq_answer_7": "Sie können uns per E-Mail an info@cyborg-it.de, per WhatsApp unter +995 598 70 79 73 oder über das Formular auf unserer Kontaktseite erreichen. Falls Sie weitere Fragen oder Sonderwünsche haben, melden Sie sich jederzeit – wir helfen Ihnen gerne weiter."
+    "faq_answer_7": "Sie können uns per E-Mail an info@cyborg-it.de, per WhatsApp unter +995 597 01 13 09 oder über das Formular auf unserer Kontaktseite erreichen. Falls Sie weitere Fragen oder Sonderwünsche haben, melden Sie sich jederzeit – wir helfen Ihnen gerne weiter."
   ,"faq_contact_btn": "Jetzt kontaktieren",
     "faq_offer_btn": "Angebot anfragen"
     },
@@ -264,7 +264,7 @@
     "address_title": "",
     "address_line1": "",
     "address_line2": "",
-    "phone": "Telefon: (+995) 598-707973",
+    "phone": "Telefon: (+995) 597-011309",
     "email_contact": "E-Mail: info@cyborg-it.de",
        "follow_us": "Folgen Sie uns"
   },
