--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -30,7 +30,7 @@
 
 
   "home": {
-    "title": "CYBORG\nHigh-Quality, Cost-Effective IT Solutions, 24/7.",
+    "title": "High-Quality, Cost-Effective IT Solutions, 24/7.",
     "subtitle": "Your Vision, Our Expertise",
     "vision_content": "We are Cyborg, a fusion of human ingenuity and machine precision.",
     "vision_content2": "Based in Georgia, we offer cost-effective solutions without the added expense of European taxes.",
@@ -216,7 +216,7 @@
     "faq_answer_6": "Yes, we offer ongoing maintenance and support to ensure your systems continue to run smoothly.",
 
     "faq_question_7": "How can I reach you?",
-    "faq_answer_7": "You can reach us by email at info@cyborg-it.de, via WhatsApp at +995 598 70 79 73, or using the contact form on our website."
+    "faq_answer_7": "You can reach us by email at info@cyborg-it.de, via WhatsApp at +995 597 01 03 09, or using the contact form on our website."
 ,"faq_contact_btn": "Contact Us",
     "faq_offer_btn": "Request a Quote",
     "page_title": "About Us - Cyborg IT Technology",
@@ -267,7 +267,7 @@
     "address_title": "Our Office",
     "address_line1": "",
     "address_line2": "",
-    "phone": "Phone: (+995) 598-707973",
+    "phone": "Phone: (+995) 597-011309",
     "email_contact": "Email: info@cyborg-it.de",
     "follow_us": "Follow Us",
     "linkedin": "LinkedIn",
